--- a/zodiac-sign-finder-main/index.html
+++ b/zodiac-sign-finder-main/index.html
@@ -17,18 +17,20 @@
             <div class="nav-wrapper">
                 <a href="#" class="logo">Zodiac Finder</a>
                 <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#finder">Zodiac Finder</a></li>
-                    
-                    <li><a id="openSignUpForm" href="#">Sign Up</a></li>
-                    <li><a  id="openSignOutForm" href="#">Sign Out</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
-                    <li><a href="#reviews">Reviews</a></li>
+                    <li><a class="nav-link" href="#home">Home</a></li>
+                <li><a class="nav-link" href="#about">About us</a></li>
+                <li><a class="nav-link" href="#finder">Zodiac Finder</a></li>
+                <li><a id="openSignUpForm" href="#">Sign Up</a></li>
+                <li><a id="openSignOutForm" href="#">Sign Out</a></li>
+               <li><a class="nav-link" href="#contact">Contact Us</a></li>
+               <li><a class="nav-link" href="#reviews">Reviews</a></li>
                 </ul>
             </div>
         </nav>
     </header>
+     <!-- for scroll effect -->
+        <script src="js/scroll.js"></script>
+
 
     <!-- Confetti Container -->
     <div id="confettiContainer" class="confetti-hidden"></div>
